[tool.poetry]
name = "meshcard"
version = "0.0.1"
description = ""
authors = ["Michael Lukowski <mlukowski@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.4"
cdislogging = "^1.1.1"
fastapi = "^0.109.1"
gunicorn = ">=20.0.4"
pydash = "^8.0.0"
PyYAML = "^6.0"
uvicorn = "^0.17.6"
sqlalchemy = "^2.0.37"
alembic = "^1.3"
psycopg2-binary = "^2.9.10"
sqlalchemy_utils = "^0.41.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"